商品検索で商品詳細で次の商品と前の商品を移動できるようにした

--- a/src/css/ProductDetailDialog.css
+++ b/src/css/ProductDetailDialog.css
@@ -11,9 +11,10 @@
   flex-shrink: 0;
 }
 
-.detail-dialog-button button {
-  margin-left: 10px;
-  padding: 10px 20px;
+.detail-dialog button {
+  height: 45px;
+  white-space: nowrap;
+  padding: 10px 15px;
   background-color: #4CAF50;
   color: white;
   border: none;
@@ -79,6 +80,7 @@
 }
 .detail-title {
   text-align: center;
+  display: flex;
 }
 
 
