--- a/src/css/history_detail.css
+++ b/src/css/history_detail.css
@@ -41,3 +41,25 @@
   max-width: 60px;
   min-width: 60px;
 }
+
+.OutOfStockStatus-top {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+.button {
+  width: calc(100% - 175px);
+  align-items: center;
+  text-align: center;
+}
+
+.OutOfStockStatus-button {
+  height: 45px;
+  white-space: nowrap;
+  padding: 10px 15px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
