--- a/src/css/store.css
+++ b/src/css/store.css
@@ -15,12 +15,7 @@
   justify-content:center;
   justify-content: space-around;
 }
-.a-button-bg{
-  margin: auto;
-  height: 30px;
-  vertical-align: middle;
-  background-color: white;
-}
+
 
 .store_name {
   min-width: 80px;
@@ -171,42 +166,36 @@
 a {
   color: inherit;
   text-decoration: none;
+  background-color: #fff;
 }
 
-.buttonUnderlineS {
-  flex: 1; /* 各ボタンが同じ幅を持つようにする */
+.buttonUnderlineSt {
   cursor: pointer;
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  height: 30px;
-  padding: 0 18px;
-  overflow: hidden;
-  font-size: 15px;
-  color: #222;
+  display: inline-block;
   text-align: center;
-  overflow-wrap: anywhere;
-  background: transparent;
-  white-space: nowrap;
-  margin: 0 0px; /* 左右に適度なスペース */
+  text-decoration: none;
+  outline: none;
+  color: #222;
+  border-radius: 20px;
+  border:1px solid #1B85FB;
+  background-color: #fff;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  margin: auto;
+  padding: 10px 15px;
 }
 
-.buttonUnderlineS::after {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  display: block;
-  width: 100%;
-  height: 2px;
-  content: "";
-  background-color: #6fa24a;
-  transform: scaleX(0);
-  transform-origin: right top;
+.buttonUnderlineSt:hover {
+  color: #fff;
+  border:1px solid #1B85FB;
+  background-color: #1B85FB;
 }
 
-@media (any-hover: hover) {
+.buttonUnderlineSt:active {
+  transform: scale(0.9);
+}
+
+/* @media (any-hover: hover) {
   .buttonUnderlineS::after {
     transition: transform 0.2s cubic-bezier(0.19, 1, 0.22, 1);
   }
@@ -216,6 +205,6 @@ a {
     transform: scaleX(1);
     transform-origin: left top;
   }
-}
+} */
 
 
