--- a/src/css/top.css
+++ b/src/css/top.css
@@ -14,17 +14,24 @@
 
 .top-BG {
   border-radius: 8px;
-  width: 250px;
+  width: 300px;
   background-color: white;
   padding: 25px;
   justify-content:center;
+  
 }
 
 .default-page {
   display: flex;
+  flex-flow: column;
   justify-content: center;
   align-items: center; /* 縦方向も中央揃え */
   margin-top: 20px; /* 適度なスペースを追加 */
+}
+
+.SelectMethod{
+  display: flex;
+  margin-top: 10px;
 }
 
 a {
@@ -35,34 +42,33 @@ a {
 
 .buttonUnderline {
   cursor: pointer;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 64px;
-  padding: 0 24px;
-  overflow: hidden;
-  font-size: 15px;
-  color: #222;
+  display: inline-block;
+  width: 125px;
   text-align: center;
-  overflow-wrap: anywhere;
-  background: transparent;
+  text-decoration: none;
+  line-height: 50px;
+  outline: none;
+  color: #222;
+  border-radius: 20px;
+  border:1px solid #1B85FB;
+  background-color: #fff;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  margin: 4px;
 }
 
-.buttonUnderline::after {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  display: block;
-  width: 100%;
-  height: 2px;
-  content: "";
-  background-color: #6fa24a;
-  transform: scaleX(0);
-  transform-origin: right top;
+.buttonUnderline:hover {
+  color: #fff;
+  border:1px solid #1B85FB;
+  background-color: #1B85FB;
 }
 
-@media (any-hover: hover) {
+.buttonUnderline:active {
+  transform: scale(0.9);
+}
+
+
+/* @media (any-hover: hover) {
   .buttonUnderline::after {
     transition: transform 0.2s cubic-bezier(0.19, 1, 0.22, 1);
   }
@@ -72,4 +78,4 @@ a {
     transform: scaleX(1);
     transform-origin: left top;
   }
-}
+} */
