--- a/src/css/history_detail.css
+++ b/src/css/history_detail.css
@@ -63,3 +63,54 @@
   border-radius: 4px;
   cursor: pointer;
 }
+
+a {
+  color: inherit;
+  text-decoration: none;
+  background-color: #ebf6f7;
+}
+
+.buttonUnderline {
+  cursor: pointer;
+  display: inline-block;
+  width: 125px;
+  text-align: center;
+  text-decoration: none;
+  line-height: 50px;
+  outline: none;
+  color: #222;
+  border-radius: 20px;
+  border:1px solid #1B85FB;
+  background-color: #fff;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  margin: 4px;
+}
+
+.buttonUnderline:hover {
+  color: #fff;
+  border:1px solid #1B85FB;
+  background-color: #1B85FB;
+}
+
+.buttonUnderline:active {
+  transform: scale(0.9);
+}
+
+
+.not-button{
+  cursor: not-allowed;
+  display: inline-block;
+  width: 125px;
+  text-align: center;
+  text-decoration: none;
+  line-height: 50px;
+  outline: none;
+  color: #222;
+  border-radius: 20px;
+  border:1px solid #222;
+  background-color: #dcdcdc;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  margin: 4px;
+}
