--- a/src/css/orderDialog.css
+++ b/src/css/orderDialog.css
@@ -39,7 +39,7 @@
 .data-table th, .data-table td {
 
   white-space: nowrap;
-  border: 1px solid #ddd; /* 境界線 */
+  border: 1px solid #222; /* 境界線 */
   padding: 8px;           /* セルの内側に余白 */
   text-align: left;       /* テキストを左揃え */
 }
