--- a/src/css/order_history.css
+++ b/src/css/order_history.css
@@ -137,7 +137,7 @@ a {
   max-width: 500px;
   min-width: 500px;
   white-space: nowrap;
-  border: 1px solid #ddd; /* 境界線 */
+  border: 1px solid #222; /* 境界線 */
   padding: 8px;           /* セルの内側に余白 */
 }
 
@@ -164,7 +164,7 @@ a {
 
 .history-table th, .history-table td {
   white-space: nowrap;
-  border: 1px solid #ddd; /* 境界線 */
+  border: 1px solid #222; /* 境界線 */
   padding: 8px;           /* セルの内側に余白 */
 }
 
