立体になるように影追加

--- a/src/css/history_detail.css
+++ b/src/css/history_detail.css
@@ -85,6 +85,7 @@ a {
   -webkit-transition: all .3s;
   transition: all .3s;
   margin: 4px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, .5);
 }
 
 .buttonUnderline:hover {
@@ -95,6 +96,7 @@ a {
 
 .buttonUnderline:active {
   transform: scale(0.9);
+  box-shadow: 0 0 0px 0 rgba(0, 0, 0, .5);
 }
 
 
