--- a/src/css/ProductSearchWord.css
+++ b/src/css/ProductSearchWord.css
@@ -3,6 +3,7 @@
   background-color: white;
   padding: 5px;
   border-radius: 4px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, .5);
 }
 
 .search-input{
@@ -34,6 +35,7 @@ a {
   -webkit-transition: all .3s;
   transition: all .3s;
   margin: 2px;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, .5);
 }
 
 .buttonUnderlineSe:hover {
@@ -44,6 +46,7 @@ a {
 
 .buttonUnderlineSe:active {
   transform: scale(0.9);
+  box-shadow: 0 0 0px 0 rgba(0, 0, 0, .5);
 }
 
 .search-data-table th, .search-data-table td {
