--- a/src/css/order_history.css
+++ b/src/css/order_history.css
@@ -8,6 +8,7 @@
   margin: 20px;
   justify-items: center;
   align-items: center;
+  box-shadow: 0 0 0px 0 rgba(0, 0, 0, .5);
 }
 .year_Select {
   width: 150px;
@@ -56,6 +57,7 @@ a {
   -webkit-transition: all .3s;
   transition: all .3s;
   margin: 4px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, .5);
 }
 
 .buttonUnderlineH:hover {
@@ -65,6 +67,7 @@ a {
 }
 .buttonUnderlineH:active {
   transform: scale(0.9);
+  box-shadow: 0 0 0px 0 rgba(0, 0, 0, .5);
 }
 
 /* @media (any-hover: hover) {
@@ -131,6 +134,7 @@ a {
   background-color: white;
   padding: 5px;
   border-radius: 4px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, .5);
 }
 
 .history-table th, .history-table td {
@@ -219,6 +223,7 @@ a {
   transition: all .3s;
   margin: auto;
   padding: 10px 15px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, .5);
 }
 
 .buttonUnderlineSt:hover {
@@ -229,4 +234,5 @@ a {
 
 .buttonUnderlineSt:active {
   transform: scale(0.9);
+  box-shadow: 0 0 0px 0 rgba(0, 0, 0, .5);
 }
