--- a/src/css/top.css
+++ b/src/css/top.css
@@ -18,7 +18,7 @@
   background-color: white;
   padding: 25px;
   justify-content:center;
-  
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, .5);
 }
 
 .default-page {
