ローディング画面を最前面になるように修正

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,11 @@ input {
   text-align: center
 }
 
+.Loadingarea {
+  position: absolute;
+  z-index: 9999;
+}
+
 /* フェードインのアニメーション */
 .fade-enter {
   opacity: 0;
