--- a/src/css/ProductSearchWord.css
+++ b/src/css/ProductSearchWord.css
@@ -61,18 +61,17 @@ a {
   font-weight: bold;         /* ヘッダーの太字 */
 }
 
-.datail{
-  overflow-y: auto;
-}
-
 .search-data-table tr:nth-child(even) {
   background-color: #f9f9f9; /* 偶数行の背景色を変更 */
 }
 .search-table {
-  height: calc(100vh - 200px); /* 高さを固定 */
-  overflow-y: scroll; /* 縦スクロールを追加 */
+  height: calc(100vh - 245px); /* 高さを固定 */
+  overflow-y: scroll;
+  overflow-x: hidden;
   width: 310px; /* 親要素の幅いっぱいに */
+  border: 1px double darkgray;
 }
+
 
 .search-data-table {
   width: 100%;
@@ -80,13 +79,17 @@ a {
   table-layout: fixed; /* テーブル内の列幅を固定 */
 }
 
-.search-data-table th, .search-data-table td {
+.search-data-table td {
   white-space: nowrap;
+  overflow: hidden;
   border: 1px solid #ddd; /* 境界線 */
-  padding: 8px;           /* セルの内側に余白 */
+  padding: 4px;           /* セルの内側に余白 */
+  padding-top: 8px;
+  padding-right: 10px;
+  text-align: left;
 }
 
-.search-data-table th {
+th {
   background-color: #f2f2f2; /* ヘッダーの背景色 */
   font-weight: bold;         /* ヘッダーの太字 */
 }
@@ -110,15 +113,16 @@ a {
   text-overflow: ellipsis;  /* 長いテキストは「...」で省略 */
 }
 
-.stcode{
+.scode{
   font-size: 14px;
   width: 75px;
 }
-.stname{
+.sname{
   display: flex;
-  width: 180px;
+  width: 182px;
   white-space: nowrap;
   overflow: hidden;
+  height: 28px;
 }
 
 .confirm-dialog-overlay {
@@ -182,4 +186,22 @@ a {
     transform: scaleX(1);
     transform-origin: left top;
   }
+}
+
+.stcode {
+  font-size: 13px;
+}
+.stname {
+  width: 190px;
+}
+
+.search-head{
+  border-collapse: collapse;
+}
+
+th {
+  table-layout: fixed; /* テーブル内の列幅を固定 */
+  padding: 4px;
+  white-space: nowrap;
+  border: 1px solid darkgray;
 }
