--- a/src/css/StoreInventory.css
+++ b/src/css/StoreInventory.css
@@ -1,20 +1,22 @@
 .store-inventory-window {
-  position: fixed;
-  z-index: 100;
-}
-.inventory-table-area{
-  margin: 20px;
-  height: calc(100vh - 100px);
+  height: calc(100vh - 80px);
 }
 
+
 .inventory-table-area {
-  flex-grow: 1;
-  overflow-y: auto; /* テーブルのコンテンツが多い場合にスクロール */
+  height: calc(100vh - 80px - 40px);
+  overflow-y: scroll;
 }
 
 .inventory-table {
   flex-shrink: 1;
   border-collapse: collapse; /* テーブルの境界線を結合 */
+}
+
+.inventory-head {
+  flex-shrink: 1;
+  height: 30px;
+  border-collapse: collapse;
 }
 
 
@@ -28,7 +30,6 @@
 }
 
 .confirm-dialog-button button {
-  margin-left: 10px;
   padding: 10px 20px;
   background-color: #4CAF50;
   color: white;
@@ -39,14 +40,17 @@
 
 
 
-.inventory-table th, .inventory-table td {
+td {
   white-space: nowrap;
   border: 1px solid #222; /* 境界線 */
   padding: 8px;           /* セルの内側に余白 */
   text-align: left;       /* テキストを左揃え */
 }
 
-.inventory-table th {
+th {
+  white-space: nowrap;
+  border: 1px solid #222; /* 境界線 */
+  padding: 8px; 
   background-color: #f2f2f2; /* ヘッダーの背景色 */
   font-weight: bold;         /* ヘッダーの太字 */
 }
@@ -59,44 +63,30 @@
   background-color: #e6e6e6; /* 奇数行の背景色 */
 }
 
-.dtvendor {
-  min-width: 80px;
-  max-width: 80px;
-  overflow: hidden;
-}
 
-.dtcode {
+.DIcode {
   text-align: right;
   width: 100px;
   min-width: 100px;
+  max-width: 100px;
 }
 
-.dtname {
-  max-width: 208px;
+.DIname {
+  max-width: 400px;
   overflow: hidden;
-  min-width: 208px;
+  min-width: 400px;
 }
 
-.dtpersonal {
-  max-width: 80px;
-  min-width: 80px;
+
+.DIprenumber, .DInumber, .DIratio {
+  max-width: 60px;
+  min-width: 60px;
 }
-.dtquantity {
+
+td {
   text-align: right;
-  max-width: 80px;
 }
 
-.dtdetail {
-  max-width: 100px;
-  min-width: 100px;
-}
-
-.dtremarks {
-  max-width: 180px;
-  min-width: 180px;
-}
-
-.dprogress {
-  max-width: 100px;
-  min-width: 100px;
+th {
+  text-align: center;
 }
