--- a/src/css/usedDialog.css
+++ b/src/css/usedDialog.css
@@ -41,7 +41,7 @@
   white-space: nowrap;
   border: 1px solid #ddd; /* 境界線 */
   padding: 8px;           /* セルの内側に余白 */
-  text-align: left;       /* テキストを左揃え */
+         /* テキストを左揃え */
 }
 
 .data-table th {
@@ -57,6 +57,7 @@
   min-width: 100px;
   max-width: 100px;
   overflow: hidden;
+  text-align: left;
 }
 
 .dtcode {
@@ -69,9 +70,11 @@
   max-width: 208px;
   overflow: hidden;
   min-width: 208px;
+  text-align: left;
 }
 
 .dtpersonal {
+  text-align: left;
   max-width: 80px;
   min-width: 80px;
 }
@@ -81,16 +84,19 @@
 }
 
 .dtdetail {
+  text-align: left;
   max-width: 100px;
   min-width: 100px;
 }
 
 .dtremarks {
+  text-align: left;
   max-width: 180px;
   min-width: 180px;
 }
 
 .dprogress {
+  text-align: left;
   max-width: 100px;
   min-width: 100px;
 }
