--- a/src/css/usedHistory.css
+++ b/src/css/usedHistory.css
@@ -3,32 +3,39 @@
 }
 
 
-.usedDate {
-  width: 100px;
+.usedDate, .dataDate {
+  max-width: 100px;
+  min-width: 100px;
 }
 
-.usedCode {
-  width: 90px;
+.usedCode, .dataCode {
+  max-width: 90px;
+  min-width: 90px;
 }
 
-.usedName {
+.usedName, .dataName {
   text-align: left;
-  width: 350px;
+  min-width: 350px;
+  max-width: 350px;
 }
 
-.usedNumber{
-  width: 30px;
+.usedNumber, .dataNumber{
+  min-width: 30px;
+  max-width: 30px;
 }
 
-.usedMethod{
-  width: 60px;
+.usedMethod, .dataMethod{
+  min-width: 60px;
+  max-width: 60px;
 }
 
-.usedIndividual{
-  width: 200px;
+.usedIndividual, .dataIndividual{
+  min-width: 200px;
+  max-width: 200px;
 }
-.usedremarks{
-  width: 200px;
+.usedremarks, .dataRemarks{
+  min-width: 200px;
+  max-width: 200px;
 }
 
 .usedhistory-area{
@@ -43,7 +50,6 @@
 }
 
 .usedhistory-table th, .usedhistory-table td {
-  max-width: 400px;
   white-space: nowrap;
   border: 1px solid #222; /* 境界線 */
   padding: 8px;           /* セルの内側に余白 */
@@ -123,4 +129,18 @@ a {
 .buttonUnderlineSt:active {
   transform: scale(0.9);
   box-shadow: 0 0 0px 0 rgba(0, 0, 0, .5);
+}
+
+.dataName, .dataIndividual, .dataRemarks{
+  text-align: left;
+  overflow: hidden;
+}
+
+.dataMethod{
+  text-align: center;
+}
+
+.historydata-table{
+  height: calc(100vh - 200px);
+  overflow-y: scroll;
 }
