詳細シート名変更

--- a/src/css/order_history.css
+++ b/src/css/order_history.css
@@ -186,7 +186,12 @@ progress {
 }
 
 .progress{
+  text-align: center;
   margin: 0;
+}
+
+.history-processing {
+  text-align: center;
 }
 
 .history-area {
