--- a/src/css/top.css
+++ b/src/css/top.css
@@ -12,7 +12,8 @@
   margin-top: 0;
 }
 
-.top-BG {
+.top-BG, .ToFrom {
+  margin: 20px;
   border-radius: 8px;
   width: 300px;
   background-color: white;
