商品検索で番号クリックで即入力機能追加

--- a/src/css/usedDialog.css
+++ b/src/css/usedDialog.css
@@ -1,5 +1,5 @@
-.confirm-top {
-  height: 150px;
+.confirm-top-used {
+  height: 170px;
   flex-shrink: 0;
 }
 
@@ -99,6 +99,10 @@
   text-align: left;
   max-width: 100px;
   min-width: 100px;
+}
+
+.CautionaryNote{
+  color: red;
 }
 
 
