--- a/src/css/ProductSearchWord.css
+++ b/src/css/ProductSearchWord.css
@@ -80,8 +80,9 @@ a {
   overflow: hidden;
   border: 1px solid #ddd; /* 境界線 */
   padding: 4px;           /* セルの内側に余白 */
+  padding-left: 2px;
   padding-top: 8px;
-  padding-right: 10px;
+  padding-right: 2px;
   text-align: left;
 }
 
@@ -113,6 +114,7 @@ th {
   font-size: 14px;
   width: 75px;
 }
+
 .sname{
   display: flex;
   width: 260px;
@@ -144,7 +146,7 @@ th {
   align-items: left;
   justify-content: left;
   height: 30px;
-  padding: 0 18px;
+  padding: 0 6px;
   overflow: hidden;
   font-size: 15px;
   color: #222;
@@ -183,7 +185,54 @@ th {
     transform-origin: left top;
   }
 }
+.buttonUnderlineDR {
+  flex: 1; /* 各ボタンが同じ幅を持つようにする */
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: right;
+  justify-content: right;
+  height: 30px;
+  padding: 0 6px;
+  overflow: hidden;
+  font-size: 15px;
+  color: #222;
+  text-align: right;
+  overflow-wrap: anywhere;
+  background: transparent;
+  white-space: nowrap;
+  margin: 0 0px; /* 左右に適度なスペース */
+}
 
+.buttonUnderlineDR::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 2px;
+  content: "";
+  background-color: #6fa24a;
+  transform: scaleX(0);
+  transform-origin: right top;
+}
+
+.buttonUnderlineDR:active {
+  transform: scale(0.9);
+}
+
+@media (any-hover: hover) {
+  .buttonUnderlineDR::after {
+    transition: transform 0.2s cubic-bezier(0.19, 1, 0.22, 1);
+  }
+
+  .buttonUnderlineDR:hover::after {
+    transition: transform 0.4s cubic-bezier(0.9, 0, 0, 1);
+    transform: scaleX(1);
+    transform-origin: left top;
+  }
+}
 .stcode {
   font-size: 13px;
 }
