--- a/src/css/usedHistory.css
+++ b/src/css/usedHistory.css
@@ -14,6 +14,7 @@
 }
 
 .usedName, .dataName {
+  overflow: hidden;
   text-align: left;
   min-width: 350px;
   max-width: 350px;
@@ -143,4 +144,19 @@ a {
 .historydata-table{
   height: calc(100vh - 200px);
   overflow-y: scroll;
+}
+
+
+.usedNums-th,.usedNums-td {
+  min-width: 65px;
+  max-width: 65px;
+}
+
+.usedtotalAmount {
+  display: flex;
+}
+
+.usedtotalAmount h2 {
+  margin: 0;
+  margin-left: 20px;
 }
