--- a/src/App.css
+++ b/src/App.css
@@ -48,5 +48,41 @@ input {
   transition: opacity 0ms ease-in;
 }
 
+.help-information-button {
+  text-align: left;
+  position: fixed;
+  z-index: 9;
+}
 
+
+.buttonUnderlinehelp {
+  font-size: 20px;
+  cursor: pointer;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  align-items: center;
+  text-decoration: none;
+  line-height: 24px;
+  outline: none;
+  color: white;
+  border-radius: 40px;
+  border:1px solid #1B85FB;
+  background-color: rgba(0, 0, 0, .2);
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  margin: 4px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, .5);
+}
+
+.buttonUnderlinehelp:hover {
+  color: #fff;
+  border:1px solid #1B85FB;
+  background-color: rgba(111, 111, 111, 0.2);
+}
+
+.buttonUnderlinehelp:active {
+  transform: scale(0.5);
+}
 
