画像URL設定修正

--- a/src/css/ProductDetailDialog.css
+++ b/src/css/ProductDetailDialog.css
@@ -65,9 +65,8 @@
   margin-bottom: 10px;
 }
 
-.detail-dialog-image iframe {
+.detail-dialog-image img {
   width: 100%;
-  height: calc(100vh - 360px);
   max-height: 650px;
 }
 
