商品詳細をテーブル化

--- a/src/css/ProductDetailDialog.css
+++ b/src/css/ProductDetailDialog.css
@@ -76,6 +76,11 @@
   justify-content: space-around;
   align-items: center;
 }
+
+.detail-top-main td {
+  text-align: left;
+}
+
 .detail-title {
   text-align: center;
   display: flex;
